# document-master

./: .gitignore  README.md  package-lock.json
backend/: .gitignore  Dockerfile  README.md  api.py  input.docx  main.py  pyproject.toml  requirements.txt  test.py  testdevices.py  translate.py  translator_instance.py
backend/backend/models/onnx/: mbart_encoder.onnx
electron/: main.js  package-lock.json  package.json  renderer.js  splash.html
frontend/: .gitignore  index.html  insert.js  main.js  package-lock.json  package.json  preload.js  readme  renderer.js  swagger.json  translate.js
frontend/src/: App.jsx  App.tsx  index.tsx  main.css
frontend/src/components/: FileSection.jsx  Header.jsx  Modal.jsx  SettingSection.jsx  Sidebar.jsx  TextareaSection.jsx  TranslateSection.jsx
frontend/src/components/context/: TranslateSettingContext.jsx
frontend/src/context/: TranslateSettingContext.jsx
frontend/src/css/: Sidebar.css  filesection.css  insert.css  translate.css
