[project]
name = "document-master-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "about-time==4.2.1",
    "accelerate>=1.12.0",
    "alive-progress==3.3.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "attrs==25.4.0",
    "autograd==1.8.0",
    "black==25.11.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cma==4.4.0",
    "coloredlogs==15.0.1",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "defusedxml==0.7.1",
    "deprecated==1.3.1",
    "dill==0.4.0",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.0",
    "fastapi-cli==0.0.16",
    "fastapi-cloud-cli==0.3.1",
    "fastapi[standard]==0.121.2",
    "fastjsonschema==2.17.1",
    "filelock==3.20.0",
    "flatbuffers==25.9.23",
    "fonttools==4.60.1",
    "fsspec==2025.10.0",
    "graphemeu==0.7.2",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "humanfriendly==10.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "kiwisolver==1.4.9",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "mypy-extensions==1.1.0",
    "natsort==8.4.0",
    "networkx==3.1",
    "ninja==1.13.0",
    "nncf==2.18.0",
    "numpy==1.26.4",
    "optimum-intel>=1.26.1",
    "optimum[nncf,openvino]>=2.0.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pathspec==0.12.1",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "protobuf==3.20.3",
    "psutil==7.1.3",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pydot==3.0.4",
    "pygments==2.19.2",
    "pymoo==0.6.1.5",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "python-pptx==1.0.2",
    "pytokens==0.3.0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "rich-toolkit==0.15.1",
    "rignore==0.7.6",
    "rpds-py==0.28.0",
    "ruff==0.14.5",
    "sacremoses==0.1.1",
    "safetensors==0.6.2",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "sentencepiece==0.2.1",
    "sentry-sdk==2.44.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.49.3",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tomli==2.3.0",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "wrapt==2.0.1",
    "xlsxwriter==3.2.9",
    "yacs==0.1.8",
]
